--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -2,115 +2,77 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorHint"
-    android:orientation="vertical">
+    android:background="@drawable/homeadminbackground"
+    android:orientation="vertical"
+    android:weightSum="3">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/allerta"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="Admin :: Home"
-        android:textSize="25sp">
+        android:layout_weight="2"
+        android:orientation="vertical">
 
-    </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/allerta"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="Admin Panel"
+            android:textSize="25sp">
+
+        </TextView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp">
 
-        <LinearLayout
+        <ImageButton
+            android:id="@+id/adddocButton"
+            android:background="@drawable/shape_homebuttons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal">
+            android:elevation="2dp"
+            android:src="@drawable/adddoctorbutton" />
 
-            <Button
-                android:id="@+id/appointmentsButton"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:background="@drawable/shape_card1"
-                android:fontFamily="@font/allerta"
-                android:gravity="center"
-                android:text="Appointments"
-                android:textSize="15sp" />
-
-            <Button
-                android:id="@+id/deptButton"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="30dp"
-                android:background="@drawable/shape_card1"
-                android:fontFamily="@font/allerta"
-                android:gravity="center"
-                android:text="Departments"
-                android:textSize="15sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
+        <ImageButton
+            android:id="@+id/removedocButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/trackButton"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:background="@drawable/shape_card1"
-                android:fontFamily="@font/allerta"
-                android:gravity="center"
-                android:text="Track Serial"
-                android:textSize="15sp" />
-
-            <Button
-                android:id="@+id/emergencyButton"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="30dp"
-                android:background="@drawable/shape_card1"
-                android:fontFamily="@font/allerta"
-                android:gravity="center"
-                android:text="Emergency"
-                android:textSize="15sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/tipsButton"
-                android:layout_width="150dp"
-                android:layout_height="100dp"
-                android:background="@drawable/shape_card1"
-                android:fontFamily="@font/allerta"
-                android:gravity="center"
-                android:text="Tips"
-                android:textSize="15sp" />
-
-            <Button
-                android:id="@+id/faqButton"
-                android:layout_width="150dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="30dp"
-                android:background="@drawable/shape_card1"
-                android:fontFamily="@font/allerta"
-                android:gravity="center"
-                android:text="FAQ"
-                android:textSize="15sp" />
-
-        </LinearLayout>
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/shape_homebuttons"
+            android:elevation="2dp"
+            android:src="@drawable/removedoctorbutton" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <ImageButton
+            android:id="@+id/historyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_homebuttons"
+            android:elevation="2dp"
+            android:src="@drawable/appointhistorybutton" />
+
+        <ImageButton
+            android:id="@+id/adminreviewButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/shape_homebuttons"
+            android:elevation="2dp"
+            android:src="@drawable/reviewbutton" />
+    </LinearLayout>
+
 </LinearLayout>
