--- a/app/src/main/res/layout/activity_track_serial_list.xml
+++ b/app/src/main/res/layout/activity_track_serial_list.xml
@@ -11,10 +11,11 @@
 
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:weightSum="6">
 
             <TextView
-                android:layout_margin="5dp"
+                android:layout_marginVertical="5dp"
                 android:layout_weight="1"
                 android:background="@color/colorCard2"
                 android:fontFamily="@font/allerta"
@@ -24,31 +25,29 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:layout_margin="5dp"
-                android:layout_weight="1"
+                android:layout_marginVertical="5dp"
+                android:layout_weight="2"
+                android:paddingVertical="5dp"
                 android:background="@color/colorCard2"
                 android:fontFamily="@font/allerta"
-                android:gravity="center"
-                android:padding="5dp"
+                android:paddingStart="10dp"
                 android:text="Patient Name"
                 android:textSize="18sp" />
 
             <TextView
-                android:layout_margin="5dp"
+                android:layout_marginVertical="5dp"
                 android:layout_weight="1"
                 android:background="@color/colorCard2"
                 android:fontFamily="@font/allerta"
-                android:gravity="center"
-                android:padding="5dp"
+                android:paddingVertical="5dp"
                 android:text="Time"
                 android:textSize="18sp" />
 
             <TextView
-                android:layout_margin="5dp"
-                android:layout_weight="1"
+                android:layout_marginVertical="5dp"
+                android:layout_weight="2"
                 android:background="@color/colorCard2"
                 android:fontFamily="@font/allerta"
-                android:gravity="center"
                 android:padding="5dp"
                 android:text="Doctor"
                 android:textSize="18sp" />
@@ -56,7 +55,7 @@
     </TableLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/trackSerialRecylcerview"
+        android:id="@+id/appointmentSerialRecylcerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
